--- a/book.css
+++ b/book.css
@@ -20,3 +20,57 @@ h2{
 h1{
     text-align: center;
 }
+@media (max-width: 480px) {
+  body {
+    background-color: rgb(160, 60, 60);
+  }
+
+  img {
+    margin-top: 80px;
+    max-width: 100%;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  body {
+    background-color: rgb(139, 51, 51);
+  }
+
+  img {
+    margin-top: 100px;
+    max-width: 85%;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+}
+@media (min-width: 769px) {
+  body {
+    background-color: brown;
+  }
+
+  img {
+    margin-top: 130px;
+    max-width: 60%;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+}
