--- a/lib.css
+++ b/lib.css
@@ -170,3 +170,88 @@ h3{
     color:rgb(13, 13, 13.6);
     opacity: .9;
 }
+@media (max-width: 480px) {
+  .navbar {
+    flex-direction: column;
+    padding: 10px 20px;
+    text-align: center;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .navbar-search {
+    margin-top: 10px;
+  }
+
+  .item {
+    margin-top: 20px;
+  }
+
+  form {
+    width: 90%;
+    height: auto;
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 32px;
+  }
+
+  label {
+    font-size: 18px;
+  }
+
+  input {
+    font-size: 16px;
+  }
+
+  button {
+    width: 60%;
+    font-size: 14px;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .navbar {
+    flex-wrap: wrap;
+    padding: 10px 40px;
+  }
+
+  .navbar ul {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  form {
+    width: 70%;
+    height: auto;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  label {
+    font-size: 22px;
+  }
+
+  input {
+    font-size: 18px;
+  }
+}
+@media (min-width: 769px) {
+  .navbar {
+    padding: 15px 75px;
+  }
+
+  form {
+    width: 25rem;
+    height: 30rem;
+  }
+
+  h1 {
+    font-size: 50px;
+  }
+}
